# advcpp

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  gtest.cmake
example/: client.cpp  epoll_client.cpp  epoll_server.cpp  server.cpp  shmem_usage.cpp
examples/: CMakeLists.txt  example.cpp  example_client.cpp  example_server.cpp
project/: CMakeLists.txt
project/include/: base_exception.h  base_logger.h  file_descriptor.h  file_logger.h  global_logger.h  process.h  stderr_logger.h  stdout_logger.h  tcp_connection.h
project/lib/: CMakeLists.txt  base_exception.cpp  file_descriptor.cpp  global_logger.cpp  process.cpp  stderr_logger.cpp  tcp_connection.cpp  tcp_server.cpp
project/lib/epoll/: CMakeLists.txt
project/lib/epoll/include/: epoll_base.h  epoll_connection.h  epoll_server.h
project/lib/epoll/src/: epoll_base.cpp  epoll_connection.cpp  epoll_server.cpp
project/lib/logger/: CMakeLists.txt
project/lib/logger/include/: base_logger.h  file_logger.h  global_logger.h  stderr_logger.h  stdout_logger.h
project/lib/logger/src/: base_logger.cpp  file_logger.cpp  global_logger.cpp  stderr_logger.cpp  stdout_logger.cpp
project/lib/process/: CMakeLists.txt
project/lib/process/include/: file_descriptor.h  process.h
project/lib/process/src/: file_descriptor.cpp  process.cpp
project/lib/shmem/: CMakeLists.txt
project/lib/shmem/include/: shmem.h
project/lib/tcp/: CMakeLists.txt
project/lib/tcp/include/: tcp_connection.h  tcp_server.h
project/lib/tcp/src/: tcp_connection.cpp  tcp_server.cpp
project/src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
